# magix

./: CMakeLists.txt  CMakePresets.json  Makefile  packages.cmake
include/: CMakeLists.txt  magix.h
include/magix/: CMakeLists.txt  magix  magix.h
src/: CMakeLists.txt
src/libmagix/: CMakeLists.txt  magix.cpp
src/test/: main.cpp
